Started Resume page

--- a/src/resume.html
+++ b/src/resume.html
@@ -6,7 +6,7 @@
 
     </head>
     
-        <body class="home">
+        <body class="resume">
             <div class="menu-icon">
                 
                     <i class="fas fa-bars"></i>
@@ -18,7 +18,7 @@
 
             <section id="menu">
                 <nav>
-                    <a href="#">Home</a>
+                    <a href="./index.html">Home</a>
                     <a href="#">About</a>
                     <a href="#">Portfolio</a>
                     <a href="#">Contact</a>
@@ -47,22 +47,24 @@
             </section>
 
             <section class="content-area">
-                <div class="img-container">
-                    <div class="user-img"></div>
-                </div>
-                <div class="profile-section">
-                <div class="profile">
-                    <h1>William <br>
-                         <span>Brooks</span></h1>
-                         <h5>Full-Stack Developer</h5>
-                         <p>Creative Designer & Software Developer
-                             from Chicago, IL. Welcome to my Site!
-                         </p>
-                         <a href="#"class="primarybtn">Portfolio</a>
-                         <a href="./resume.html"class="ghostbtn">Resume</a>
+              <div class="title">
 
+                <h1>Education</h1>
+
+              </div>
+              <div class="ed-section">
+                <div class="ed-box">
+                    <h5>Lambda School</h5>
+                    <p>Full-Stack Development <br>
+                    Cohort: WEB21 2019-2020</p>
                 </div>
-            </div>
+                <div class="ed-box">
+                        <h5>Thornwood High School</h5>
+                        <p>Location: South Holland, IL<br>
+                        Graduate, Class of 2015</p>
+                    </div>
+
+              </div>
 
             </section>
             <script type="text/javascript" src="./js/index.js">
