--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -6,7 +6,7 @@
 
     </head>
     
-        <body class="resume">
+        <body class="portfolio">
             <div class="menu-icon">
                 
                     <i class="fas fa-bars"></i>
