Updates, portfolio page, breaking down components.

--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -55,16 +55,16 @@
 
               </div>
               <div class="project-section">
-                <div class="project-box" style="background: url(../) 
-                no-repeat center center; 
-                -webkit-background-size: cover;
-                -moz-background-size: cover;
-                -o-background-size: cover;
-                background-size: cover;">
+                <div class="project-box" style="background: url('./img/gokunimbus.png') no-repeat center center;">
+                    <div class="grey-bg">
+                        <div clas="project-info">
+                     <div class="project-details">
                         Client: N/A Date: 8/30/2019 Type: JavaScript
-                    </div>
-                    <div class="project-title">
-                       Adventures Of Goku & Nimbus (Flappy Bird Clone)
+                        <div class="project-title">
+                                Adventures Of Goku & Nimbus (Flappy Bird Clone)
+                             </div>
+                         </div>
+                        </div>
                     </div>
                 </div>
 
