Building out contact page

--- a/src/contact.html
+++ b/src/contact.html
@@ -19,8 +19,9 @@
             <section id="menu">
                 <nav>
                     <a href="./index.html">Home</a>
-                    <a href="./portfolio.html">Portfolio</a>
-                    <a href="./contact.html">Contact</a>
+                    <a href="#">About</a>
+                    <a href="http://www.github.com/realwillbrooks">Portfolio</a>
+                    <a href="#">Contact</a>
                 </nav>
             </section>
             <section class="info-section">
