--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -2,6 +2,8 @@
     <head>
             <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700&display=swap" rel="stylesheet">
             <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css" rel="stylesheet">
+            <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/fontawesome.min.css" rel="stylesheet">
+
             <link rel="stylesheet" href="./scss/main.scss">
 
     </head>
@@ -55,18 +57,57 @@
 
               </div>
               <div class="project-section">
+
                 <div class="project-box" style="background: url('./img/gokunimbus.png') no-repeat center center;">
                     <div class="grey-bg">
-                        <div clas="project-info">
+
+                        <div class="project-info">
                      <div class="project-details">
                         Client: N/A Date: 8/30/2019 Type: JavaScript
+                    </div>
                         <div class="project-title">
                                 Adventures Of Goku & Nimbus (Flappy Bird Clone)
-                             </div>
-                         </div>
                         </div>
+                             <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                        </div>
+
                     </div>
                 </div>
+
+                <div class="project-box" style="background: url('./img/rag.png') no-repeat center center;">
+                    <div class="grey-bg">
+
+                        <div class="project-info">
+                     <div class="project-details">
+                        Client: N/A Date: 8/30/2019 Type: JavaScript
+                    </div>
+                        <div class="project-title">
+                                Adventures Of Goku & Nimbus (Flappy Bird Clone)
+                        </div>
+                             <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="project-box" style="background: url('./img/artista.png') no-repeat center center;">
+                    <div class="grey-bg">
+
+                        <div class="project-info">
+                     <div class="project-details">
+                        Client: N/A Date: 8/30/2019 Type: JavaScript
+                    </div>
+                        <div class="project-title">
+                                Adventures Of Goku & Nimbus (Flappy Bird Clone)
+                        </div>
+                             <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                        </div>
+
+                    </div>
+                </div>
+                
+
+
 
               </div>
             </div>
