--- a/src/contact.html
+++ b/src/contact.html
@@ -6,7 +6,7 @@
 
     </head>
     
-        <body class="home">
+        <body class="contact">
             <div class="menu-icon">
                     <i class="fas fa-bars"></i>
             </div>
@@ -43,14 +43,14 @@
 
             <section class="content-area">
                 <div class="img-container">
-                    <div class="user-img">
+                    <div class="form-section">
 
                         <form action="/" method="POST">
-
-                        <input type="text" name="name" required>
-                        <input type="email" name="email" required>
-                        <input type="text" name="budget">
-                        <textarea name="message" rows="8" cols="63" required> </textarea>
+                            <h4>Send a Message</h4>
+                        <input type="text" name="name" required placeholder="Name">
+                        <input type="email" name="email" required placeholder="Email">
+                        <input type="text" name="budget" placeholder="Budget">
+                        <textarea name="message" rows="12" required placeholder="Message"> </textarea>
 
                         <button type="submit">Send Message</button>
                     
